# FFAIAssistant

./: .gitignore  AI_CAPABILITIES.md  AI_DEBUG_GUIDE.md  BUILD_TRIGGER.md  CAPACIDADES_IA.md  CI_CHANGES_SUMMARY.md  Copy_of_FFAI_Colab_Notebook.ipynb  DIAGNOSTICO_IA.md  DOCKER_TESTING.md  Dockerfile.build  ENSEMBLE_IA_IMPLEMENTATION.md  GITHUB_SECRETS_SETUP.md  GOOGLE_SETUP.md  IMPLEMENTATION_SUMMARY.md  MODELS_SETUP.md  MODEL_STATUS.md  README.md  README_ENSEMBLE.md  README_GITHUB.md  SOLUTION_SUMMARY.md  VERIFICATION_REPORT.md  agent_memory.json  build.gradle.kts  build.sh  commit_changes.sh  convert_model.py  fix_git.sh  gradle.properties  gradlew  push_build.sh  pyproject.toml  settings.gradle.kts  upload_to_github.sh
.github/workflows/: build-apk.yml  build.yml  ci.yml  release.yml  (+1 more)
FFAIAssistant/: ARCHITECTURE_REVIEW.md  Copy_of_FFAI_Colab_Notebook.ipynb  Dockerfile  SOCKETIO_MIGRATION_GUIDE.md  build.gradle.kts  docker-android-test.yml  render.yaml
android-sdk/: .knownPackages
app/: build.gradle.kts  google-services-template.json  proguard-rules.pro
build_scripts/: build_apk.sh  clean_build.sh
colab/: 01_yolov8_training.ipynb  02_dqn_training.ipynb  03_ppo_training.ipynb  04_sac_training.ipynb  05_world_model.ipynb  06_transformer.ipynb  07_icm_curiosity.ipynb  08_meta_learning.ipynb  FFAI_Colab_Notebook.ipynb  README.md
docs/: USAGE.md
model_training/: create_initial_model.py
scripts/: docker-check.sh
server/: Dockerfile  README.md  deploy-oci.sh  docker-compose.yml  main.py  main_advanced.py  requirements.txt
tests/: conftest.py  test_api.py
(+171 files in other folders)
